
        Version history:

0.0.1.11 - 2005/11/01

        + added patch by pescuma for making normal avatars transparent (or semi-
          transparent).

0.0.1.10 - 2005/10/19

        ! added support for jabber avatar updates.

        + better cleanup on Unload()
        
0.0.1.9 - 2005/10/18

        * accept .dat as valid image extension (sometimes, icq avatars are saved as .dat 
          files, even if they are actually JPG images (reason unknown, but we can load
          them anyway. MS_UTILS_LOADBITMAP will return an error when the file is not
          really a valid image - the extension doesn't matter).

0.0.1.8 - 2005/10/17

        ! fix. Don't show tray warning messages about invalid avatar file size when
          the option "Show warning messages" on Customize->Contact pictures is unchecked.
          
        * changed way how protocols are enabled/disabled. After protocols have been added
          or removed, "new" protocols are automatically enabled, so you don't have to do
          that manually any more.
          
        * you can completely disable the size limit check by setting the size limit on
          Customize->Contact List to 0 (zero).

0.0.1.7 - 2005/10/16

        * bugfix: check filenames more aggressivly.

        * bugfix: premultiply was broken (thanks FYR)
        
        + added a service to draw a contacts picture to a target device context.
          See m_avatars.h for description on how to use that service.
          
        + added file size limitation to the picture loader. The default are 70Kbytes,
          should be enough for most avatar pictures (they have to be small images).
          The limit can be increased on the option page (Customize->contact pictures).

0.0.1.5 - 2005/09/15

        + added updater support
        
        * moved option page to Customize->Contact pictures

0.0.1.4 - 2005/08/31

        * cache reallocs will now send avatar change notifies (realloc() may move the